<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <com.bignerdranch.android.drawsimply.draw.DrawView
        android:id="@+id/draw_view"
        android:layout_width="match_parent"
        android:layout_height="567dp"
        android:background="@color/white" />

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="67dp"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_button"
        android:gravity="top|center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/add"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/save_button"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="599dp"
        android:layout_marginEnd="92dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save_button"
        android:gravity="top|center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/save"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/undo_button"
        android:layout_width="52dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="588dp"
        android:layout_marginEnd="275dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/undo_button"
        android:gravity="top|center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/undo" />

    <ImageButton
        android:id="@+id/clear_button"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="591dp"
        android:layout_marginEnd="157dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/clear_button"
        android:gravity="top|center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/clear" />

    <ImageButton
        android:id="@+id/redo_button"
        android:layout_width="52dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="589dp"
        android:layout_marginEnd="221dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/redo_button"
        android:gravity="top|center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/redo" />

    <ImageButton
        android:id="@+id/pen_button"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="333dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/pen_button"
        android:gravity="top|center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/pen"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="726dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/image_view"
        android:scaleType="fitXY"
        android:visibility="invisible" />

</RelativeLayout>